--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,13 +15,12 @@ input[type="submit"]:hover {
 }
 
 .main {
-	width: 600px;
+	width: 800px;
 	margin: auto;
 }
 
 #chatContainer {
-	width: 600px;
-
+	width: 800px;
 	border: 1px solid #000;
 	position: relative;
 	overflow: hidden;
@@ -32,11 +31,14 @@ input[type="submit"]:hover {
 	border: 1px solid #000;
 	overflow: scroll;
 	margin: 10px;
-	height: 370px;
+	height: 400px;
+	color: #28ED00;
+	background-color: #222;
+	font-family: "Courier New", Courier, monospace;
 }
 
 .msg:hover {
-	background-color: #ddd;
+	background-color: #555;
 }
 #m {
 	width: 90%;
