--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,29 +24,42 @@ input[type="submit"]:hover {
 	border: 1px solid #000;
 	position: relative;
 	overflow: hidden;
-
 }
 
 #messagesView {
 	border: 1px solid #000;
-	overflow: scroll;
+	overflow: hidden;
 	margin: 10px;
-	padding-right: 10px;
-	height: 400px;
+	height: 450px;
 	color: #28ED00;
 	background-color: #222;
 	font-family: "Courier New", Courier, monospace;
+	padding: 3px;
 }
 
 .msg:hover {
 	background-color: #555;
 }
+
 #m {
 	width: 90%;
+	color: #00ff00;
+	background-color: #333;
+	padding: 4px;
+	border: none;
+}
+
+#m:focus {
+	outline: 3px solid #FFD900;
 }
 
 #messages {
+	width: 100%;
+	height: 100%;
 	list-style-type: none;
+	overflow: auto;
+	padding-bottom: 0;
+	margin: 0;
 }
 #messages li {
 	padding-top: 2px;
